# ObjFW

./: .cirrus.yml  .editorconfig  .gitignore  .hgignore  .travis.yml  COMPILING.md  ChangeLog  DONATING.md  Doxyfile  INSTALLATION.md  Info.plist  LICENSE  Makefile  PLATFORMS  PLATFORMS.md  README  README-WINDOWS.md  README.gmi  README.md  SERIALIZATION  TODO  autogen.sh  buildsys.mk.in  config.sub  configure.ac  doxygen.cfg  extra.mk.in  objfw-compile  objfw-config.in  objfw.spec
.fossil-settings/: binary-glob  clean-glob  encoding-glob  ignore-glob
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml  custom.md  new-issue.md
.github/workflows/: CXXTest.mm  amiga-gcc.yml  djgpp.yml  dragonflybsd.yml  fedora-mingw-gcc.yml  fedora-mingw.yml  freebsd.yml  ios.yml  macos-10.15.yml  macos-11.yml  macos-12.yml  macos-13.yml  macos-14.yml  macos-15-intel.yml  macos-15.yml  macos-26.yml  macos-latest.yml  morphos.yml  msys2.yml  netbsd-gcc.yml  netbsd.yml  nintendo-3ds.yml  nintendo-ds.yml  nintendo-switch.yml  openbsd.yml  ubuntu-18.04-32bit.yml  ubuntu-18.04-gcc-32bit.yml  ubuntu-18.04-gcc.yml  ubuntu-18.04.yml  ubuntu-20.04-32bit.yml  ubuntu-20.04-gcc-32bit.yml  ubuntu-20.04-gcc.yml  ubuntu-20.04.yml  ubuntu-latest-32bit.yml  ubuntu-latest-gcc-32bit.yml  ubuntu-latest-gcc.yml  ubuntu-latest.yml  wii-u.yml  wii.yml
.travis/: before_install.sh  build.sh  script.sh
ObjFW.xcodeproj/: project.pbxproj
build-aux/: config.sub
build-aux/m4/: buildsys.m4
cmake/: ObjFWConfig.cmake  ObjFWConfigVersion.cmake.in
documentation/: ai-policy.gmi  changes.gmi  compiling.gmi  differences-to-foundation.gmi  donating.gmi  installation.gmi  platforms.gmi  release-process.gmi
generators/: CaseFoldingGenerator.h  CaseFoldingGenerator.m  Makefile  TableGenerator.h  TableGenerator.m  UpperLowerGenerator.h  UpperLowerGenerator.m  copyright.h  gen_tables.m  main.m
generators/unicode/: Makefile  TableGenerator.h  TableGenerator.m  copyright.h
libobjfw.xcodeproj/: project.pbxproj
m4/: acx_pthread.m4  buildsys.m4
misc/: Info.plist.in  ObjFWConfig.cmake.in  ObjFWConfigVersion.cmake.in  bridge-module.map  keys.asc  module.map
new_tests/: Makefile  OFASN1DERParsingTests.m  OFArrayTests.h  OFArrayTests.m  OFColorTests.m  OFConcreteMutableSetTests.m  OFCryptographicHashTests.m  OFDNSResolverTests.m  OFDateTests.m  OFDictionaryTests.m  OFHTTPCookieManagerTests.m  OFINIFileTests.m  OFIRITests.m  OFInvocationTests.m  OFJSONTests.m  OFLocaleTests.m  OFMatrix4x4Tests.m  OFMemoryStreamTests.m  OFMutableArrayTests.m  OFMutableSetTests.m  OFMutableStringTests.m  OFNumberTests.m  OFObjectTests.m  OFPBKDF2Tests.m  OFPluginTests.m  OFPropertyListTests.m  OFSPXSocketTests.m  OFScryptTests.m  OFSetTests.m  OFSocketTests.m  OFStringTests.m  OFSubprocessTests.m  OFSystemInfoTests.m  OFThreadTests.m  OFUNIXDatagramSocketTests.m  OFValueTests.m  RuntimeARCTests.m  testfile.ini  testfile.txt
new_tests/plugin/: Info.plist.in
scripts/: build_ios.sh
src/: Info.plist.in  Makefile  OF4x4Matrix.h  OF4x4Matrix.m  OFAAAADNSResourceRecord.h  OFAAAADNSResourceRecord.m  OFADNSResourceRecord.h  OFADNSResourceRecord.m  OFASN1BitString.h  OFASN1BitString.m  OFASN1Boolean.h  OFASN1Boolean.m  OFASN1DERRepresentation.h  OFASN1Enumerated.h  OFASN1Enumerated.m  OFASN1IA5String.h  OFASN1IA5String.m  OFASN1Integer.h  OFASN1Integer.m  OFASN1IntegerOrEnumerated.h  OFASN1IntegerOrEnumerated.m  OFASN1Null.h  OFASN1Null.m  OFASN1NumericString.h  OFASN1NumericString.m  OFASN1ObjectIdentifier.h  OFASN1ObjectIdentifier.m  OFASN1OctetString.h  OFASN1OctetString.m  OFASN1PrintableString.h  OFASN1PrintableString.m  OFASN1UTF8String.h  OFASN1UTF8String.m  OFASN1Value.h  OFASN1Value.m  OFASPrintF.h  OFASPrintF.m  OFAdjacentArray.h  OFAdjacentArray.m  OFAdjacentData.h  (+883 more)
src/bridge/: Info.plist.in  Makefile  NSArray+OFObject.h  NSArray+OFObject.m  NSArray_OFArray.h  NSArray_OFArray.m  NSBridging.h  NSData+OFObject.h  NSData+OFObject.m  NSDate+OFObject.h  NSDate+OFObject.m  NSDictionary+OFObject.h  NSDictionary+OFObject.m  NSDictionary_OFDictionary.h  NSDictionary_OFDictionary.m  NSEnumerator+OFObject.h  NSEnumerator+OFObject.m  NSNumber+OFObject.h  NSNumber+OFObject.m  NSOFArray.h  NSOFArray.m  NSOFData.h  NSOFData.m  NSOFDictionary.h  NSOFDictionary.m  NSOFEnumerator.h  NSOFEnumerator.m  NSOFSet.h  NSOFSet.m  NSObject+OFObject.h  NSObject+OFObject.m  NSSet+OFObject.h  NSSet+OFObject.m  NSString+OFObject.h  NSString+OFObject.m  OFArray+NSObject.h  OFArray+NSObject.m  OFArray_NSArray.h  OFArray_NSArray.m  OFBridging.h  (+44 more)
src/encodings/: Makefile  codepage-437.m  codepage-850.m  codepage-852.m  codepage-858.m  codepage_437.m  codepage_850.m  codepage_858.m  common.h  iso-8859-15.m  iso-8859-2.m  iso-8859-3.m  iso_8859-15.m  iso_8859-2.m  iso_8859-3.m  iso_8859_15.h  iso_8859_15.m  iso_8859_2.m  iso_8859_3.m  koi8-r.m  koi8-u.m  koi8_r.m  koi8_u.m  mac-roman.m  mac_roman.m  unicode.m  windows-1250.m  windows-1251.m  windows-1252.m  (+3 more)
support/: Bridge-Info.plist.in
tests/: ForwardingTests.m  ImportTest.m  Info.plist.in  Makefile  OF4x4MatrixTests.m  OFASN1DEREncodedValueTests.m  OFASN1DERParsingTests.m  OFASN1DERRepresentationTests.m  OFASN1DERValueTests.m  OFArray.m  OFArrayTests.h  OFArrayTests.m  OFBlockTests.m  OFCanvasTests.m  OFCharacterSetTests.m  OFColorTests.m  OFConcreteArrayTests.m  OFConcreteDataTests.m  OFConcreteDictionaryTests.m  OFConcreteMutableArrayTests.m  OFConcreteMutableDataTests.m  OFConcreteMutableDictionaryTests.m  OFConcreteMutableSetTests.m  OFConcreteSetTests.m  OFCryptographicHashTests.m  OFDDPSocketTests.m  OFDNSResolverTests.m  OFDataASN1DERValueTests.m  OFDataArray.m  OFDataArrayTests.m  OFDataTests.h  OFDataTests.m  OFDateTests.m  OFDictionary.m  OFDictionaryTests.h  OFDictionaryTests.m  OFFileManagerTests.m  OFFileTests.m  OFHMACTests.m  OFHTTPClientTests.m  (+122 more)
tests_new/: Makefile  array.m  hashes.m  main.h  main.m  tcpsocket.m  thread.m  xmlelement.m
utils/: Makefile  OFZIP.m  objfw-compile  objfw-compile.1  objfw-config.1  objfw-config.in  objfw-embed  objfw-embed.1  objfw-new  objfw-unzip.m
(+842 files in other folders)
